--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -11,6 +11,8 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <link href='https://cdn.jsdelivr.net/yasqe/2.11.7/yasqe.min.css' rel='stylesheet' type='text/css'/>
+    <link href='https://cdn.jsdelivr.net/yasr/2.10.6/yasr.min.css' rel='stylesheet' type='text/css'/>
+    <link href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css" rel="stylesheet" />
     <link href="{{url_for('static', filename='css/sparql2git.css')}}" rel="stylesheet">
 
     <title>SPARQL2Git</title>
