--- a/src/templates/browser.html
+++ b/src/templates/browser.html
@@ -8,11 +8,11 @@
           <button id="newquery" aria-hidden="true" class="btn btn-default delete pull-right" alt="Create new SPARQL query"><span class="glyphicon glyphicon-plus" aria-hidden="true"></span></button>
           <table id="files" class="table table-hover table-bordered">
           {% for file in files: %}
-          <tr><td><p><a id="{{file['sha']}}" class="query" href="#">{{file['name']}}</a></p> &nbsp; <a id="{{file['sha']}}-delete" data-sha="{{file['sha']}}" data-path="{{file['name']}}" class="deletequery" alt="Delete this SPARQL query" href="#">[x]</a></td></tr>
+          <tr><td><p><a id="{{file['sha']}}" class="query" href="#">{{file['name']}}</a> &nbsp; <a id="{{file['sha']}}-delete" data-sha="{{file['sha']}}" data-path="{{file['name']}}" class="deletequery" alt="Delete this SPARQL query" href="#">[x]</a></p></td></tr>
           {% endfor %}
           </table>
 
-          <a class="btn btn-default" href="http://grlc.io/api/{{user_info['login']}}/{{repo}}/api-docs">
+          <a class="btn btn-default" href="http://grlc.io/api/{{user_info['login']}}/{{repo}}/api-docs" target="_blank">
             <img src="{{url_for('static', filename='img/grlc-logo-small-grey.png')}}" width='20px'/> grlc
           </a>
         </div>
@@ -121,7 +121,7 @@ $('.deletequery').click(function(){
                           console.log(data);
                           $('#files tr').remove();
                           for (i = 0; i < data.length; i++) {
-                            $('#files').append('<tr><td><p><a id="' + data[i].sha + '" class="query" href="#">'+ data[i].name +'</a></p> &nbsp; <a id="'+data[i].sha+'-delete" data-sha="'+data[i].sha+'" data-path="'+data[i].name+'" class="deletequery" alt="Delete this SPARQL query" href="#">[x]</a></td></tr>');
+                            $('#files').append('<tr><td><p><a id="' + data[i].sha + '" class="query" href="#">'+ data[i].name +'</a> &nbsp; <a id="'+data[i].sha+'-delete" data-sha="'+data[i].sha+'" data-path="'+data[i].name+'" class="deletequery" alt="Delete this SPARQL query" href="#">[x]</a></p></td></tr>');
                             current_sha = undefined;
                             current_file = undefined;
                           }
