user email stuff, ports

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,7 @@
       <div class="jumbotron">
         <h1>SPARQL2Git</h1>
         <p class="lead">Start making your SPARQL queries reusable!</p>
-        <p><a id="login" class="btn btn-lg btn-primary" href="https://github.com/login/oauth/authorize?scope=repo&client_id={{client_id}}" role="button">Log in with GitHub</a></p>
+        <p><a id="login" class="btn btn-lg btn-primary" href="https://github.com/login/oauth/authorize?scope=repo%2Cuser&client_id={{client_id}}" role="button">Log in with GitHub</a></p>
         <div id="status"></div>
       </div>
 
