--- a/src/templates/repos.html
+++ b/src/templates/repos.html
@@ -2,7 +2,7 @@
 
       <div class="jumbotron">
         <h1>SPARQL2Git</h1>
-        <p class="lead">Select the GitHub repository you want to work with, or <a id="newrepo" href="#">create a new one</a>.</p>
+        <p class="lead">Welcome, {{username}}! Select the GitHub repository you want to work with, or <a id="newrepo" href="#">create a new one</a>.</p>
         <table class="table table-hover table-bordered">
         {% for sr in sparql_repos: %}
         <tr><td><p><a id="{{sr['name']}}" class="repo" href="/edit?repo={{sr['name']}}">{{sr['name']}}</a></p></td></tr>
