--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -15,6 +15,17 @@
     <link href="https://code.jquery.com/ui/1.11.1/themes/smoothness/jquery-ui.css" rel="stylesheet" />
     <link href="{{url_for('static', filename='css/sparql2git.css')}}" rel="stylesheet">
 
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-93100277-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
+
     <title>SPARQL2Git</title>
 
   </head>
